--- a/css/main.css
+++ b/css/main.css
@@ -3322,25 +3322,30 @@ a.logo {
     ul.social-media {
       display: flex;
       justify-content: center;
-      width: 80%;
+      margin: 0;
+      width: 65%;
       position: relative;
-      left: 6rem;
+      padding: 0;
+      left: 0;
       align-items: center;
       /* border: 1px solid gold; */
+    }
+
+    ul.social-media li {
+      margin-right: -2rem;
     }
 
     ul.social-media p {
       display: flex;
       align-items: center;
       flex-direction: row;
-      font-size: 1.8rem;
-      margin-right: -3rem;
+      font-size: 1.7rem;
       font-family: "Brandon Text Medium";
     }
 
     i.fab, i.fas {
       font-size: 2.5rem;
-      padding-right: 1rem;
+      padding-right: 0.5rem;
       color: #001F40;
     }
 
@@ -3352,12 +3357,10 @@ a.logo {
     div.copyright p {
       text-align: left;
       align-items: center;
-      font-size: 1.8rem;
-      margin-left: 3rem;
-      margin-bottom: 2rem;
+      font-size: 1.7rem;
+      margin: 2rem 0 2rem 3rem;
       width: 120%;
       padding: 0;
-      margin-top: 2rem;
       font-family: "Brandon Text Medium";
     }
 
